/**
 * # Handle CLPR Message Payload Transaction
 * Deliver a single CLPR message payload from the native message queue to local middleware handling.
 *
 * ### Keywords
 * The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT",
 * "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" in this
 * document are to be interpreted as described in
 * [RFC2119](https://www.ietf.org/rfc/rfc2119) and clarified in
 * [RFC8174](https://www.ietf.org/rfc/rfc8174).
 */
syntax = "proto3";

package org.hiero.hapi.interledger.clpr;

// SPDX-License-Identifier: Apache-2.0
option java_package = "org.hiero.hapi.interledger.clpr.protoc";
// <<<pbj.java_package = "org.hiero.hapi.interledger.clpr">>> This comment is special code for setting PBJ Compiler java package
option java_multiple_files = true;

import "interledger/state/clpr/clpr_ledger.proto";
import "interledger/state/clpr/clpr_message_queue.proto";

/**
 * Internal-only transaction body used to deliver a single inbound CLPR payload to local middleware handling.
 *
 * This operation is expected to be dispatched by CLPR message-bundle handling code, not by external clients.
 */
message ClprHandleMessagePayloadTransactionBody {
  /**
   * The identifier of the source ledger that provided this payload.
   */
  org.hiero.hapi.interledger.state.clpr.ClprLedgerId source_ledger_id = 1;

  /**
   * The local received message id assigned while processing the inbound bundle.
   */
  uint64 inbound_message_id = 2;

  /**
   * The payload to deliver.
   *
   * Exactly one of `message` or `message_reply` MUST be set.
   */
  org.hiero.hapi.interledger.state.clpr.ClprMessagePayload payload = 3;
}
